Определение версии 1С:Предприятие в ОС Ubuntu